[gd_scene load_steps=5 format=2]

[ext_resource path="res://data/themes/main_menu/main.theme" type="Theme" id=1]
[ext_resource path="res://src/game_menu.gd" type="Script" id=2]
[ext_resource path="res://data/images/pause_menu/background.png" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0, 0, 0, 0.736002 )
light_color = Color( 0, 0, 0, 0 )
dark_color = Color( 0.8, 0.8, 0.8, 0 )
border_size = 0
border_blend = true
draw_bg = true

[node name="game_menu" type="Popup"]

pause_mode = 2
margin_right = 1920.0
margin_bottom = 1080.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 1 )
popup_exclusive = true
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]

anchor_right = 1
anchor_bottom = 1
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/panel = SubResource( 1 )

[node name="Container" type="Container" parent="."]

margin_left = 410.0
margin_top = 240.0
margin_right = 1510.0
margin_bottom = 840.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="TextureFrame" type="TextureRect" parent="Container"]

margin_right = 1100.0
margin_bottom = 600.0
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 3 )
stretch_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]

anchor_left = 2
anchor_top = 2
anchor_right = 2
anchor_bottom = 2
margin_left = 400.0
margin_top = 180.0
margin_right = -400.0
margin_bottom = -180.0
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 20
alignment = 1

[node name="fullscreen" type="Button" parent="Container/VBoxContainer"]

margin_right = 800.0
margin_bottom = 78.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Fullscreen (F11)"
flat = false

[node name="main_menu" type="Button" parent="Container/VBoxContainer"]

margin_top = 98.0
margin_right = 800.0
margin_bottom = 176.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Return to Main Menu"
flat = false

[node name="quit" type="Button" parent="Container/VBoxContainer"]

margin_top = 196.0
margin_right = 800.0
margin_bottom = 274.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Quit to Desktop"
flat = false

[node name="return" type="Button" parent="Container/VBoxContainer"]

margin_top = 294.0
margin_right = 800.0
margin_bottom = 372.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Return to Game"
flat = false

[connection signal="pressed" from="Container/VBoxContainer/fullscreen" to="." method="_on_fullscreen_pressed"]

[connection signal="pressed" from="Container/VBoxContainer/main_menu" to="." method="_on_main_menu_pressed"]

[connection signal="pressed" from="Container/VBoxContainer/quit" to="." method="_on_quit_pressed"]

[connection signal="pressed" from="Container/VBoxContainer/return" to="." method="_on_return_pressed"]


